Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -36,11 +36,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'https://api.openbrewerydb.org/breweries?page=1&per_page=50'\n"
+    "url = 'https://api.openbrewerydb.org/breweries?page=1&per_page=50'\n",
+    "\n",
+    "import requests\n",
+    "\n",
+    "response = requests.get(\"https://api.openbrewerydb.org/breweries?page=1&per_page=50\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 2,\n",
+       " 'name': 'Avondale Brewing Co',\n",
+       " 'brewery_type': 'micro',\n",
+       " 'street': '201 41st St S',\n",
+       " 'city': 'Birmingham',\n",
+       " 'state': 'Alabama',\n",
+       " 'postal_code': '35222-1932',\n",
+       " 'country': 'United States',\n",
+       " 'longitude': '-86.774322',\n",
+       " 'latitude': '33.524521',\n",
+       " 'phone': '2057775456',\n",
+       " 'website_url': 'http://www.avondalebrewing.com',\n",
+       " 'updated_at': '2018-08-23T23:19:57.825Z',\n",
+       " 'tag_list': []}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data)"
    ]
   },
   {
@@ -52,11 +120,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': 2,\n",
+       " 'name': 'Avondale Brewing Co',\n",
+       " 'brewery_type': 'micro',\n",
+       " 'street': '201 41st St S',\n",
+       " 'city': 'Birmingham',\n",
+       " 'state': 'Alabama',\n",
+       " 'postal_code': '35222-1932',\n",
+       " 'country': 'United States',\n",
+       " 'longitude': '-86.774322',\n",
+       " 'latitude': '33.524521',\n",
+       " 'phone': '2057775456',\n",
+       " 'website_url': 'http://www.avondalebrewing.com',\n",
+       " 'updated_at': '2018-08-23T23:19:57.825Z',\n",
+       " 'tag_list': []}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "url_two = 'https://api.openbrewerydb.org/breweries?page=2&per_page=50'\n",
+    "response_two = requests.get(\"https://api.openbrewerydb.org/breweries?page=1&per_page=50\")\n",
+    "data_two = response_two.json()\n",
+    "data_two[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alldata = data + data_two\n",
+    "len(alldata)"
    ]
   },
   {
@@ -68,11 +184,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "count=0\n",
+    "for x in alldata:\n",
+    "    if x['state']=='Alaska':\n",
+    "        count+=1\n",
+    "print(count)"
    ]
   },
   {
@@ -84,10 +212,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'micro'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "alldata[0]['brewery_type']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'contract', 'regional', 'brewpub', 'micro', 'planning'}\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "b_type = []\n",
+    "for x in alldata:\n",
+    "    b_type.append(x['brewery_type'])\n",
+    "# print(b_type)\n",
+    "\n",
+    "print(set(b_type))\n",
+    "print(len(set(b_type)))\n",
     "\n"
    ]
   },
@@ -102,11 +266,173 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33.1216751 -117.0814849\n",
+      "33.1216751 -117.0814849\n"
+     ]
+    }
+   ],
+   "source": [
+    "# where = alldata.find[\"Devil's Potion Brewing Company LLC\"]\n",
+    "# print(where)\n",
+    "\n",
+    "# result = alldata.find(\"Devil's Potion\")\n",
+    "\n",
+    "for x in alldata:\n",
+    "    if x['name']==\"Devil's Potion Brewing Company LLC\":\n",
+    "#         return x['latitude'], x['longitude']\n",
+    "        print(x['latitude'], x['longitude'])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30.309840116145182\n",
+      "29.519429717918285\n",
+      "30.29261059519302\n",
+      "30.530557065810846\n",
+      "43.06872612633575\n",
+      "43.13494946981374\n",
+      "6.151276492001057\n",
+      "5.170669495151328\n",
+      "5.173620199690491\n",
+      "6.326961846936487\n",
+      "6.138169972234867\n",
+      "5.33518266609095\n",
+      "3.0524770305736504\n",
+      "4.874232219505419\n",
+      "5.24228429041323\n",
+      "4.751830004916524\n",
+      "5.066789404174425\n",
+      "26.719933897854606\n",
+      "24.862795040848678\n",
+      "24.874351474350625\n",
+      "24.92916958959672\n",
+      "23.163673681777667\n",
+      "4.171074869414245\n",
+      "0.09785809039634545\n",
+      "6.503050475302558\n",
+      "7.023106109256554\n",
+      "1.0599451990717308\n",
+      "7.692457891841483\n",
+      "4.173549018297196\n",
+      "7.06829103408313\n",
+      "3.8954418420787262\n",
+      "1.4890316836094823\n",
+      "0.4123456721003458\n",
+      "5.708241337210536\n",
+      "6.381125457915379\n",
+      "0.48018139662925136\n",
+      "30.56527645669707\n",
+      "8.217610660232841\n",
+      "1.5019555094588446\n",
+      "0.0\n",
+      "1.4630255546444249\n",
+      "6.584354412255346\n",
+      "0.36898946862046755\n",
+      "0.9484793578147729\n",
+      "7.064888346230513\n",
+      "7.08404742434029\n",
+      "6.975619807715421\n",
+      "6.362565037892504\n",
+      "6.456813851703807\n",
+      "0.9633931460870322\n",
+      "30.309840116145182\n",
+      "29.519429717918285\n",
+      "30.29261059519302\n",
+      "30.530557065810846\n",
+      "43.06872612633575\n",
+      "43.13494946981374\n",
+      "6.151276492001057\n",
+      "5.170669495151328\n",
+      "5.173620199690491\n",
+      "6.326961846936487\n",
+      "6.138169972234867\n",
+      "5.33518266609095\n",
+      "3.0524770305736504\n",
+      "4.874232219505419\n",
+      "5.24228429041323\n",
+      "4.751830004916524\n",
+      "5.066789404174425\n",
+      "26.719933897854606\n",
+      "24.862795040848678\n",
+      "24.874351474350625\n",
+      "24.92916958959672\n",
+      "23.163673681777667\n",
+      "4.171074869414245\n",
+      "0.09785809039634545\n",
+      "6.503050475302558\n",
+      "7.023106109256554\n",
+      "1.0599451990717308\n",
+      "7.692457891841483\n",
+      "4.173549018297196\n",
+      "7.06829103408313\n",
+      "3.8954418420787262\n",
+      "1.4890316836094823\n",
+      "0.4123456721003458\n",
+      "5.708241337210536\n",
+      "6.381125457915379\n",
+      "0.48018139662925136\n",
+      "30.56527645669707\n",
+      "8.217610660232841\n",
+      "1.5019555094588446\n",
+      "0.0\n",
+      "1.4630255546444249\n",
+      "6.584354412255346\n",
+      "0.36898946862046755\n",
+      "0.9484793578147729\n",
+      "7.064888346230513\n",
+      "7.08404742434029\n",
+      "6.975619807715421\n",
+      "6.362565037892504\n",
+      "6.456813851703807\n",
+      "0.9633931460870322\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'float' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-9-f69ef2b4f8a7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0mdistance\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlat\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'latitude'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlong\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'longitude'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdistance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdistance\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;31m#have distance for each\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m#want to find smallest distance\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'float' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "lat = 33.1216751\n",
+    "long = -117.0814849\n",
+    "import math\n",
+    "for x in alldata:\n",
+    "    distance = math.sqrt(((lat - float(x['latitude']))**2) + ((long - float(x['longitude']))**2))\n",
+    "    print(distance)\n",
+    "print(min(distance))\n",
+    "#have distance for each\n",
+    "#want to find smallest distance\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "# (x1 - x2)**2 + (y1-y2)**2 then sqrt"
    ]
   },
   {
@@ -138,7 +464,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "url = 'https://api.openbrewerydb.org/breweries?page=1&per_page=50'\n"
    ]
   },
   {
@@ -334,7 +660,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
